--- a/index.html
+++ b/index.html
@@ -383,10 +383,10 @@
 
                 <div class="col-md-8 col-sm-6">
                     <div class="wow fadeInUp footer-copyright" data-wow-delay="0.4s">
-                        <p>Copyright &copy; 2016 Your App Starter
+                        <p> &copy;© 2018 Copyright: 
                             <span>||</span>
-                            Design:
-                            <a href="https://plus.google.com/+templatemo" title="free css templates" target="_blank">Templatemo</a>
+                          
+                            <a href="https://Allio.in" title="free css templates" target="_blank">Allio.in</a>
                         </p>
                     </div>
                 </div>
