--- a/index.html
+++ b/index.html
@@ -72,6 +72,12 @@
                         <a href="#newsletter" class="smoothScroll">Newsletter</a>
                     </li> -->
                     <li>
+                        <a href="#" class="smoothScroll">SignUp</a>
+                    </li>
+                    <li>
+                        <a href="#" class="smoothScroll">SignIn</a>
+                    </li>
+                    <li>
                         <a href="#" data-toggle="modal" data-target="#modal1">Contact</a>
                     </li>
                 </ul>
